"Index, JS. page reworks"
Fixing the the body in the index page.

Updating the JS page with new iify for the page

--- a/index.html
+++ b/index.html
@@ -14,25 +14,32 @@
   </head>
 
   <div class="container">
-<header>
-       <img src="image/inball.png" class="icon" alt="picture inside of poke ball ">
-      <nav>
-        <ul role="menu">
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="about.html" role="menuitem">About Website</a>
-          </li>
-          <li>
-            <a href="search.html">Search</a>
-          </li>
-        </ul>
-      </nav>
-  </header>
+    <header>
+           <img src="image/inball.png" class="icon" alt="picture inside of poke ball ">
+          <nav>
+            <ul role="menu">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="about.html" role="menuitem">About Website</a>
+              </li>
+              <li>
+                <a href="search.html">Search</a>
+              </li>
+            </ul>
+          </nav>
+      </header>
+    
 
   <body>
-    <div id="root"></div>
-     <script src="js/scripts.js"></script>
+  <div id="root"></div>
+   <script src="js/scripts.js"></script> 
+
+   
+   <h1>Pokiedex</h1>
+   <ul class='pokemon-list'></ul>
+ 
+
   </body>
 </html> 
