--- a/about.html
+++ b/about.html
@@ -28,3 +28,31 @@
       </ul>
     </nav>
 </header>
+
+<body>
+  <div style="margin: 0px auto">
+    <div class="about"></div>
+   
+      <h1>>Objective</h1>
+    
+      <p> The websites propose is and what it accomplishs :</p>
+      <ul>
+        <li>JS</li>
+        <li>Html</li>
+        <li>(fill)</li>
+        <li>(fill)</li>
+      </ul>
+  
+  <h2>>Layout Explination</h2>
+  <p>Everything you need to know about my path.</p>
+  <p>(fill)</p>
+
+  <div style="margin: 0px auto">
+    <div class="Contact"></div>
+  <h1>>Contact</h1>
+  <p>(Fill)</p>
+
+
+</body
+
+</html>
