--- a/index.html
+++ b/index.html
@@ -41,16 +41,13 @@
 
    <button id='show-modal'>Show modal</button>
    <div id='modal-container'>
-     <div class='modal'>
-       <button class='modal-close'>Close</button>
-       <h1>Modal title</h1>
-       <p>Modal text</p>       
-     </div>
+    
    </div>
 
 
    <script src="js/promise-polyfill.js"></script> 
    <script src="js/fetch.umd.js"></script> 
+   <script src="js/modal.js"></script> 
    <script src="js/scripts.js"></script> 
 
   </body>
