--- a/about.html
+++ b/about.html
@@ -35,18 +35,19 @@
    
       <h1>>Objective</h1>
     
-      <p> The websites propose is and what it accomplishs :</p>
+      <p> This websites propose is to showcase my abilty to integrate: </p>
       <ul>
-        <li>JS</li>
+        <li>CSS</li>
         <li>Html</li>
-        <li>(fill)</li>
-        <li>(fill)</li>
+        <li>Java script</li>
       </ul>
   
   <h2>>Layout Explination</h2>
-  <p>Everything you need to know about my path.</p>
-  <p>(fill)</p>
+  <p>This Website uses a modal to easily sort and store information of each pokemon</p>
+  <p>wd</p>
+  <p>wd</p>
 
+  
   <div style="margin: 0px auto">
     <div class="Contact"></div>
   <h1>>Contact</h1>
