--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
    
           <ul class='pokemon-list'></ul>
           <div id='modal-container'>
+          <div id='image-container'></div>
         </div>
    </body>
   </div>
