--- a/about.html
+++ b/about.html
@@ -12,21 +12,28 @@
 </head>
 
 <div class="container">
-<header>
-     <img src="image/inball.png" class="icon" alt="picture inside of poke ball ">
-    <nav>
-      <ul role="menu">
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="about.html" role="menuitem">About Website</a>
-        </li>
-        <li>
-          <a href="search.html">Search</a>
-        </li>
-      </ul>
-    </nav>
+  <header>    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+       <img src="image/inball.png" class="icon" alt="picture inside of poke ball ">
+       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+         <li class="nav-item active">
+           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="about.html">about</a>
+         </li>
+       </ul>
+       <form class="form-inline my-2 my-lg-0">
+         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+       </form>
+     </div>
+   </nav>  
+   
 </header>
 
 <body>
