--- a/index.html
+++ b/index.html
@@ -38,16 +38,11 @@
                 </form>
               </div>
             </nav>  
-            
         </header>
-        
         <div>
-
           <h1>Pokiedex</h1>
-
-
  <!-- Model--> 
-
+        <ul>
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -68,21 +63,19 @@
             </div>
           </div>
 
-          <ul class='pokemon-list'></ul>
+          <div class='pokemon-list'></div>
           <div id='modal-container'>
           <div id='image-container'></div>
-        </div>
+          </div>
+      </ul>
    </body>
   </div>
-
 <!-- Page conecters--> 
    <script src="js/promise-polyfill.js"></script> 
    <script src="js/fetch.umd.js"></script> 
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
    <script src="js/script.js"></script>
-
   </body>
 </html> 
